--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<link rel="stylesheet" type="text/css" href="./checkAllOlymp_files/rsosh.css">
-<script>var notcolor = 0;</script>
-<script src="./checkAllOlymp_files/diploma.user.js"></script>
+<link rel="stylesheet" type="text/css" href="https://ksrt12.github.io/rsosh.css">
 </head>
 
 <body>
@@ -14,7 +12,7 @@
 <div class="contents">
 <div class="left">
 <br>
-<script>loadd()</script>
+<!--script>loadd()</script-->
 <p id="results" style="text-align:left;"></p>
 <br>
 </div>
