--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<link rel="stylesheet" type="text/css" href="https://ksrt12.github.io/rsosh.css">
+<script src="diploma.js"></script>
+<link rel="stylesheet" type="text/css" href="rsosh.css">
 </head>
 
 <body>
@@ -12,7 +12,6 @@
 <div class="contents">
 <div class="left">
 <br>
-<!--script>loadd()</script-->
 <p id="results" style="text-align:left;"></p>
 <br>
 </div>
