--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script src="diploma.js"></script>
 <link rel="stylesheet" type="text/css" href="rsosh.css">
+<link rel="icon" type="image/png" href="icon.png">
+<title>Олимпиады РСОШ</title>
 </head>
 
 <body>
