--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 
 <body>
 <div class="main">
-<div class="contents">
-<div class="left">
 <br>
-<p id="results" style="text-align:left;"></p>
+<p id="results"></p>
 <br>
 </div>
 </body>
