--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<script src="bvi.js"></script>
 <script src="diploma.js"></script>
 <link rel="stylesheet" type="text/css" href="rsosh.css">
 <link rel="icon" type="image/png" href="icon.png">
