--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script src="bvi.js"></script>
 <script src="diploma.js"></script>
-<link rel="stylesheet" type="text/css" href="rsosh.css">
+<link rel="stylesheet" type="text/css" href="olymp.css">
 <link rel="icon" type="image/png" href="icon.png">
 <title>Олимпиады РСОШ</title>
 </head>
 
 <body>
+<div class="left">
+<img src="files/itmo.png" alt="IT's MOre than a University">
+</div>
+<div class="right">
+<p><a href="files/2020_rsosh_BVI.pdf">РСОШ 2020, дающие БВИ</a></p>
+<p><a href="files/2020_rsosh_100.pdf">РСОШ 2020, дающие 100 баллов</a></p>
+<p><a href="files/2020_vsosh_BVI.pdf">ВСОШ, дающие БВИ</a></p>
+<p><a href="files/2020.pdf">Списки ВСЕРОСа 2020</a></p>
+<p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
+<p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
+</div>
 <div class="main">
-<h3><script>document.write(loadvars());</script></h3>
+<h3><script>document.write(loadvars(1));</script></h3>
 <p id="results"></p>
 <br>
 </div>
