add dynamic background
Signed-off-by: Kazakov Stepan <ksrt12group@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
+<!-- <canvas id="stars"> -->
+<div class="container">
+<!-- <script>background.initializr();</script> -->
 <div class="left">
-<img src="files/itmo.png" alt="IT's MOre than a University">
+<img src="files/itmo_white.png" alt="IT's MOre than a University">
 </div>
 <div class="right">
 <p><a href="files/2020_rsosh_BVI.pdf">РСОШ 2020, дающие БВИ</a></p>
@@ -26,5 +29,8 @@
 <p id="results"></p>
 <br>
 </div>
+</div>
+<!-- </canvas> -->
+<script src="stars.js" type="text/javascript"></script>
 </body>
 </html>
