open links in new tabs by default
Signed-off-by: Kazakov Stepan <ksrt12group@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 <link rel="stylesheet" type="text/css" href="olymp.css">
 <link rel="icon" type="image/png" href="icon.png">
 <title>Олимпиады РСОШ</title>
+<base target="_blank">
 </head>
 
 <body>
 <!-- <canvas id="stars"> -->
 <div class="container">
-<!-- <script>background.initializr();</script> -->
 <div class="left">
-<img src="files/itmo_white.png" alt="IT's MOre than a University">
+<a href="https://abit.itmo.ru">
+<img src="files/itmo_white.png" title="IT's MOre than a University">
+</a>
 </div>
 <div class="right">
 <p><a href="files/2020_rsosh_BVI.pdf">РСОШ 2020, дающие БВИ</a></p>
