--- a/test.html
+++ b/test.html
@@ -4,7 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script src="bvi.js"></script>
 <script src="diploma.js"></script>
-<link rel="stylesheet" type="text/css" href="css/als_sans.css">
 <link rel="stylesheet" type="text/css" href="css/olymp.css">
 <link rel="icon" type="image/png" href="icon.png">
 <title>Олимпиады РСОШ</title>
@@ -12,6 +11,7 @@
 </head>
 
 <body>
+<canvas id="stars">
 <div class="container">
 <div class="left">
 <a href="https://abit.itmo.ru">
@@ -32,5 +32,7 @@
 <br>
 </div>
 </div>
+</canvas>
+<script src="stars.js" type="text/javascript"></script>
 </body>
 </html>
