--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
 <div class="container">
+<canvas id="stars"></canvas>
+<script src="stars.js" type="text/javascript"></script>
 <div class="left">
 <a href="https://abit.itmo.ru">
 <img src="files/itmo_white.png" title="IT's MOre than a University">
