--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script src="bvi.js"></script>
 <script src="diploma.js"></script>
+<link rel="stylesheet" type="text/css" href="css/als_sans.css">
 <link rel="stylesheet" type="text/css" href="css/olymp.css">
 <link rel="icon" type="image/png" href="icon.png">
 <title>Олимпиады РСОШ</title>
@@ -11,8 +12,9 @@
 </head>
 
 <body>
-<canvas id="stars">
 <div class="container">
+<canvas id="stars"></canvas>
+<script src="stars.js" type="text/javascript"></script>
 <div class="left">
 <a href="https://abit.itmo.ru">
 <img src="files/itmo_white.png" title="IT's MOre than a University">
@@ -32,7 +34,5 @@
 <br>
 </div>
 </div>
-</canvas>
-<script src="stars.js" type="text/javascript"></script>
 </body>
 </html>
