--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Cache-control" content="public">
+<meta http-equiv="Cache-control" content="max-age=5184000">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="Description" content="Abiturient 2.1,
+    Author: S.V. Kazakov, L3331
+    Faculty of Laser Photonics and Optoelectronics,
+    ITMO University">
 <script src="bvi.js"></script>
 <script src="diploma.js"></script>
 <link rel="stylesheet" type="text/css" href="css/als_sans.css">
