use table caption instead of document.write()
Signed-off-by: Kazakov Stepan <ksrt12group@gmail.com>

--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
 <div class="right">
 <p><a href="files/2020_rsosh_BVI.pdf">РСОШ 2020, дающие БВИ</a></p>
 <p><a href="files/2020_rsosh_100.pdf">РСОШ 2020, дающие 100 баллов</a></p>
-<p><a href="files/2020_vsosh_BVI.pdf">ВСОШ, дающие БВИ</a></p>
+<p><a href="files/2020_vsosh_BVI.pdf">ВСОШ (предметы и направления)</a></p>
 <p><a href="files/2020.pdf">Списки ВСЕРОСа 2020</a></p>
 <p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
 <p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
 </div>
 <div class="main">
-<h3><script>document.write(loadvars(1));</script></h3>
 <p id="results"></p>
 <br>
 </div>
