--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
 <br>
 </div>
 </div>
+<div class="copyright">
+<a href="https://vk.com/kazakovstepan">© 2020, kazakovstepan</a>
+</div>
 </body>
 </html>
