--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 <meta http-equiv="Cache-control" content="public">
 <meta http-equiv="Cache-control" content="max-age=5184000">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="Description" content="Abiturient 2.1,
-    Author: S.V. Kazakov, L3331
-    Faculty of Laser Photonics and Optoelectronics,
-    ITMO University">
+<meta name="Description" content="Поиск и проверка олимпиад абитуриентов">
 <script src="bvi.js"></script>
 <script src="diploma.js"></script>
 <link rel="stylesheet" type="text/css" href="css/als_sans.css">
