--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 <meta name="Description" content="Поиск и проверка олимпиад абитуриентов">
 <script src="bvi.js"></script>
 <script src="diploma.js"></script>
-<link rel="stylesheet" type="text/css" href="css/als_sans.css">
+<style>
+@font-face {
+    font-family: 'ALS Schlange Sans';
+    src: url('fonts/font.eot');
+    src: url('fonts/font.eot?#iefix') format('embedded-opentype'), url('fonts/font.svg#als_schlange_sansregular') format('svg'), url('fonts/font.woff') format('woff'), url('fonts/font.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+</style>
 <link rel="stylesheet" type="text/css" href="css/olymp.css">
 <link rel="icon" type="image/png" href="icon.png">
 <title>Олимпиады РСОШ</title>
