--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta http-equiv="Cache-control" content="public">
 <meta http-equiv="Cache-control" content="max-age=5184000">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="Description" content="Поиск и проверка олимпиад абитуриентов">
+<meta name="description" content="Поиск и проверка олимпиад абитуриентов">
+<meta name="theme-color" content="#3367D6">
 <script src="bvi.js"></script>
 <script src="diploma.js"></script>
 <style>
@@ -19,7 +20,12 @@
 }
 </style>
 <link rel="stylesheet" type="text/css" href="css/olymp.css">
-<link rel="icon" type="image/png" href="icon.png">
+<link rel="apple-touch-icon" sizes="120x120" href="icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
+<link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
 <title>Олимпиады РСОШ</title>
 <base target="_blank">
 </head>
