--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 @font-face {
     font-family: 'ALS Schlange Sans';
     src: url('fonts/font.eot');
-    src: url('fonts/font.eot?#iefix') format('embedded-opentype'), url('fonts/font.svg#als_schlange_sansregular') format('svg'), url('fonts/font.woff') format('woff'), url('fonts/font.ttf') format('truetype');
+    src: url('fonts/font.eot?#iefix') format('embedded-opentype'),
+		 url('fonts/font.svg#als_schlange_sansregular') format('svg'),
+		 url('fonts/font.woff') format('woff'),
+		 url('fonts/font.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -31,27 +34,28 @@
 </head>
 
 <body>
-<canvas id="stars"></canvas>
-<script src="stars.js" type="text/javascript"></script>
-<div class="left">
-<a href="https://abit.itmo.ru">
-<img src="files/itmo_white.png" title="IT's MOre than a University">
-</a>
-</div>
-<div class="right">
-<p><a href="files/2020_rsosh_BVI.pdf">РСОШ 2020, дающие БВИ</a></p>
-<p><a href="files/2020_rsosh_100.pdf">РСОШ 2020, дающие 100 баллов</a></p>
-<p><a href="files/2020_vsosh_BVI.pdf">ВСОШ (предметы и направления)</a></p>
-<p><a href="files/2020.pdf">Списки ВСЕРОСа 2020</a></p>
-<p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
-<p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
-</div>
-<div class="main">
-<p id="results"></p>
-<br>
-</div>
-<div class="copyright">
-<a href="https://vk.com/kazakovstepan">© 2020, kazakovstepan</a>
-</div>
+    <canvas id="stars"></canvas>
+    <script src="stars.js" type="text/javascript"></script>
+    <div class="left">
+        <a href="https://abit.itmo.ru">
+            <img src="files/itmo_white.png" title="IT's MOre than a University">
+        </a>
+    </div>
+    <div class="right">
+        <p><a href="files/2020_rsosh_BVI.pdf">РСОШ 2020, дающие БВИ</a></p>
+        <p><a href="files/2020_rsosh_100.pdf">РСОШ 2020, дающие 100 баллов</a></p>
+        <p><a href="files/2020_vsosh_BVI.pdf">ВСОШ (предметы и направления)</a></p>
+        <p><a href="files/2020.pdf">Списки ВСЕРОСа 2020</a></p>
+        <p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
+        <p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
+    </div>
+    <div class="main">
+        <p id="results"></p>
+        <br>
+    </div>
+    <div class="copyright">
+        <a href="https://vk.com/kazakovstepan">© 2020, kazakovstepan</a>
+    </div>
 </body>
+
 </html>
