fix background in portrait orientation
Signed-off-by: Kazakov Stepan <ksrt12group@gmail.com>

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
         <p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
     </div>
-    <div class="main">
+    <div id="main_res" class="main">
         <p id="results"></p>
         <br>
     </div>
