--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <script src="stars.js" type="text/javascript"></script>
     <div class="left">
         <a href="https://abit.itmo.ru">
-            <img src="files/itmo_white.png" title="IT's MOre than a University">
+            <img src="files/itmo_white.png" alt="abit" title="IT's MOre than a University">
         </a>
     </div>
     <div class="right">
