--- a/test.html
+++ b/test.html
@@ -5,41 +5,57 @@
 <meta http-equiv="Cache-control" content="public">
 <meta http-equiv="Cache-control" content="max-age=5184000">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="Description" content="Abiturient 2.1,
-    Author: S.V. Kazakov, L3331
-    Faculty of Laser Photonics and Optoelectronics,
-    ITMO University">
+<meta name="description" content="Поиск и проверка олимпиад абитуриентов">
+<meta name="theme-color" content="#3367D6">
 <script src="bvi.js"></script>
 <script src="diploma.js"></script>
-<link rel="stylesheet" type="text/css" href="css/als_sans.css">
+<style>
+@font-face {
+    font-family: 'ALS Schlange Sans';
+    src: url('fonts/font.eot');
+    src: url('fonts/font.eot?#iefix') format('embedded-opentype'),
+		 url('fonts/font.svg#als_schlange_sansregular') format('svg'),
+		 url('fonts/font.woff') format('woff'),
+		 url('fonts/font.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+</style>
 <link rel="stylesheet" type="text/css" href="css/olymp.css">
-<link rel="icon" type="image/png" href="icon.png">
+<link rel="apple-touch-icon" sizes="120x120" href="icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
+<link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
 <title>Олимпиады РСОШ</title>
 <base target="_blank">
 </head>
 
 <body>
-<div class="container">
-<canvas id="stars"></canvas>
-<script src="stars.js" type="text/javascript"></script>
-<div class="left">
-<a href="https://abit.itmo.ru">
-<img src="files/itmo_white.png" title="IT's MOre than a University">
-</a>
-</div>
-<div class="right">
-<p><a href="files/2020_rsosh_BVI.pdf">РСОШ 2020, дающие БВИ</a></p>
-<p><a href="files/2020_rsosh_100.pdf">РСОШ 2020, дающие 100 баллов</a></p>
-<p><a href="files/2020_vsosh_BVI.pdf">ВСОШ, дающие БВИ</a></p>
-<p><a href="files/2020.pdf">Списки ВСЕРОСа 2020</a></p>
-<p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
-<p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
-</div>
-<div class="main">
-<h3><script>document.write(loadvars(1));</script></h3>
-<p id="results"></p>
-<br>
-</div>
-</div>
+    <canvas id="stars"></canvas>
+    <script src="stars.js" type="text/javascript"></script>
+    <div class="left">
+        <a href="https://abit.itmo.ru">
+            <img src="files/itmo_white.png" alt="abit" title="IT's MOre than a University">
+        </a>
+    </div>
+    <div class="right">
+        <p><a href="files/2020_rsosh_BVI.pdf">РСОШ 2020, дающие БВИ</a></p>
+        <p><a href="files/2020_rsosh_100.pdf">РСОШ 2020, дающие 100 баллов</a></p>
+        <p><a href="files/2020_vsosh_BVI.pdf">ВСОШ (предметы и направления)</a></p>
+        <p><a href="files/2020.pdf">Списки ВСЕРОСа 2020</a></p>
+        <p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
+        <p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
+    </div>
+    <div id="main_res" class="main">
+        <p id="results"></p>
+        <br>
+    </div>
+    <div class="copyright">
+        <a href="https://vk.com/kazakovstepan">© 2020, kazakovstepan</a>
+    </div>
 </body>
+
 </html>
