--- a/test.html
+++ b/test.html
@@ -2,9 +2,7 @@
 <html lang="ru">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="Cache-control" content="public">
-<meta http-equiv="Cache-control" content="max-age=5184000">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=0.65">
 <meta name="description" content="Поиск и проверка олимпиад абитуриентов">
 <meta name="theme-color" content="#3367D6">
 <script src="bvi.js"></script>
@@ -35,7 +33,7 @@
 
 <body>
     <canvas id="stars"></canvas>
-    <script src="stars.js" type="text/javascript"></script>
+    <script src="stars.js"></script>
     <div class="left">
         <a href="https://abit.itmo.ru">
             <img src="files/itmo_white.png" alt="abit" title="IT's MOre than a University">
@@ -51,7 +49,6 @@
     </div>
     <div id="main_res" class="main">
         <p id="results"></p>
-        <br>
     </div>
     <div class="copyright">
         <a href="https://vk.com/kazakovstepan">© 2020, kazakovstepan</a>
