compress stars.js
Signed-off-by: Kazakov Stepan <ksrt12group@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="theme-color" content="#3367D6">
 <script src="bvi.js"></script>
 <script src="diploma.js"></script>
+<script src="stars.js"></script>
 <style>
 @font-face {
     font-family: 'ALS Schlange Sans';
@@ -33,7 +34,7 @@
 
 <body>
     <canvas id="stars"></canvas>
-    <script src="stars.js"></script>
+    <script>start_stars(); window.onresize=function(){start_stars()};</script>
     <div class="left">
         <a href="https://abit.itmo.ru">
             <img src="files/itmo_white.png" alt="abit" title="IT's MOre than a University">
