--- a/test.html
+++ b/test.html
@@ -47,6 +47,7 @@
         <p><a href="files/2020.pdf">Списки ВСЕРОСа 2020</a></p>
         <p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
         <p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
+        <p><a href="https://abit.itmo.ru/page/101/">Ответственные лица (бакалавриат)</a></p>
     </div>
     <div id="main_res" class="main">
         <p id="results"></p>
