--- a/test.html
+++ b/test.html
@@ -53,22 +53,22 @@
         <br>
         <div class="indata" id="indata_id">
             <div class="search">
-                <form id="search_form">
+                <form id="search_form" autocomplete="on">
                     <p>
                         <label for="LN">Фамилия</label>
-                        <input type="text" id="LN"/>
+                        <input type="text" id="LN" autocomplete="on" name="LN"/>
                     </p>
                     <p>
                         <label for="FN">Имя</label>
-                        <input type="text" id="FN"/>
+                        <input type="text" id="FN" autocomplete="on" name="FN"/>
                     </p>
                     <p>
                         <label for="MN">Отчество</label>
-                        <input type="text" id="MN"/>
+                        <input type="text" id="MN" autocomplete="on" name="MN"/>
                     </p>
                     <p>
                         <label for="BD">Дата рождения</label>
-                        <input type="date" id="BD" max="2005-01-01" min="1977-01-01" width="130px"/>
+                        <input type="date" id="BD" max="2005-01-01" min="1977-01-01" autocomplete="off" width="130px"/>
                     </p>
                 </form>
             </div>
