--- a/test.html
+++ b/test.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.65">
 <meta name="description" content="Поиск и проверка олимпиад абитуриентов">
 <meta name="theme-color" content="#3367D6">
-<script src="bvi.js"></script>
-<script src="diploma.js"></script>
-<script src="stars.js"></script>
+<script src="js/bvi.js"></script>
+<script src="js/diploma.js"></script>
+<script src="js/stars.js"></script>
 <style>
 @font-face {
     font-family: 'ALS Schlange Sans';
