google-site-verification 2
by meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.65">
 <meta name="description" content="Поиск и проверка олимпиад абитуриентов">
 <meta name="theme-color" content="#3367D6">
+<meta name="google-site-verification" content="-UX3T2JISXFjo-jWgSf0NvtiZazPDnhPaFh9Rff3z4g" />
 <script src="js/bvi.js"></script>
 <script src="js/diploma.js"></script>
 <!-- <script src="stars.js"></script> -->
