site: add placeholder
Signed-off-by: Kazakov Stepan <ksrt12group@gmail.com>

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
                 <form id="search_form" autocomplete="on">
                     <p>
                         <label for="LN">Фамилия</label>
-                        <input type="text" id="LN" name="last_name"/>
+                        <input type="text" id="LN" placeholder="Иванов" name="last_name"/>
                     </p>
                     <p>
                         <label for="FN">Имя</label>
-                        <input type="text" id="FN" name="first_name"/>
+                        <input type="text" id="FN" placeholder="Иван" name="first_name"/>
                     </p>
                     <p>
                         <label for="MN">Отчество</label>
-                        <input type="text" id="MN" name="middle_name"/>
+                        <input type="text" id="MN" placeholder="Иванович" name="middle_name"/>
                     </p>
                     <p>
                         <label for="BD">Дата рождения</label>
@@ -77,37 +77,37 @@
                 <form>
                     <p>
                         <label for="m">Математика</label>
-                        <input type="number" min="0" max="100" value="0" id="m"/>
+                        <input type="number" min="0" max="100" placeholder="62" value="0" id="m"/>
                     </p>
                     <p>
                         <label for="r">Русский язык</label>
-                        <input type="number" min="0" max="100" value="0" id="r"/>
+                        <input type="number" min="0" max="100" placeholder="60" value="0" id="r"/>
                     </p>
                     <p>
                         <label for="i">Информатика</label>
-                        <input type="number" min="0" max="100" value="0" id="i"/>
+                        <input type="number" min="0" max="100" placeholder="61" value="0" id="i"/>
                     </p>
                     <p>
                         <label for="f">Физика</label>
-                        <input type="number" min="0" max="100" value="0" id="f"/>
+                        <input type="number" min="0" max="100" placeholder="60" value="0" id="f"/>
                     </p>
                 </form>
                 <form>
                     <p>
                         <label for="e">Иностранный язык</label>
-                        <input type="number" min="0" max="100" value="0" id="e"/>
+                        <input type="number" min="0" max="100" placeholder="60" value="0" id="e"/>
                     </p>
                     <p>
                         <label for="o">Обществознание</label>
-                        <input type="number" min="0" max="100" value="0" id="o"/>
+                        <input type="number" min="0" max="100" placeholder="60" value="0" id="o"/>
                     </p>
                     <p>
                         <label for="c">Химия</label>
-                        <input type="number" min="0" max="100" value="0" id="c"/>
+                        <input type="number" min="0" max="100" placeholder="60" value="0" id="c"/>
                     </p>
                     <p>
                         <label for="b">Биология</label>
-                        <input type="number" min="0" max="100" value="0" id="b"/>
+                        <input type="number" min="0" max="100" placeholder="60" value="0" id="b"/>
                     </p>
                 </form>
             </div>
