site: update layout
for laptops

Signed-off-by: ksrt12 <ksrt12group@gmail.com>

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </p>
                     <p>
                         <label for="BD">Дата рождения</label>
-                        <input type="date" id="BD" max="2005-01-01" min="1977-01-01" name="bday" width="130px"/>
+                        <input type="date" id="BD" max="2005-01-01" min="1996-01-01" name="bday"/>
                     </p>
                 </form>
             </div>
