site: drop default values for EGE points
fix status for russian language

Signed-off-by: Kazakov Stepan <ksrt12group@gmail.com>

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </p>
                     <p>
                         <label for="BD">Дата рождения</label>
-                        <input type="date" id="BD" max="2005-01-01" min="1996-01-01" name="bday"/>
+                        <input type="date" id="BD" max="2005-01-01" min="1996-01-01" value="2002-01-01" name="bday"/>
                     </p>
                 </form>
             </div>
@@ -77,37 +77,37 @@
                 <form>
                     <p>
                         <label for="m">Математика</label>
-                        <input type="number" min="0" max="100" placeholder="62" value="0" id="m"/>
+                        <input type="number" min="0" max="100" placeholder="62" id="m"/>
                     </p>
                     <p>
                         <label for="r">Русский язык</label>
-                        <input type="number" min="0" max="100" placeholder="60" value="0" id="r"/>
+                        <input type="number" min="0" max="100" placeholder="60" id="r"/>
                     </p>
                     <p>
                         <label for="i">Информатика</label>
-                        <input type="number" min="0" max="100" placeholder="61" value="0" id="i"/>
+                        <input type="number" min="0" max="100" placeholder="61" id="i"/>
                     </p>
                     <p>
                         <label for="f">Физика</label>
-                        <input type="number" min="0" max="100" placeholder="60" value="0" id="f"/>
+                        <input type="number" min="0" max="100" placeholder="60" id="f"/>
                     </p>
                 </form>
                 <form>
                     <p>
                         <label for="e">Иностранный язык</label>
-                        <input type="number" min="0" max="100" placeholder="60" value="0" id="e"/>
+                        <input type="number" min="0" max="100" placeholder="60" id="e"/>
                     </p>
                     <p>
                         <label for="o">Обществознание</label>
-                        <input type="number" min="0" max="100" placeholder="60" value="0" id="o"/>
+                        <input type="number" min="0" max="100" placeholder="60" id="o"/>
                     </p>
                     <p>
                         <label for="c">Химия</label>
-                        <input type="number" min="0" max="100" placeholder="60" value="0" id="c"/>
+                        <input type="number" min="0" max="100" placeholder="60" id="c"/>
                     </p>
                     <p>
                         <label for="b">Биология</label>
-                        <input type="number" min="0" max="100" placeholder="60" value="0" id="b"/>
+                        <input type="number" min="0" max="100" placeholder="60" id="b"/>
                     </p>
                 </form>
             </div>
