--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p><a href="files/2020.pdf">Списки ВСЕРОСа 2020</a></p>
         <p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
         <p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
-        <p><a href="files/contacts.pdf">Ответственные лица (бакалавриат)</a></p>
+        <p id="contacts" style="display: none"><a href="files/contacts.pdf">Ответственные лица (бакалавриат)</a></p>
     </div>
     <div id="main_res" class="main">
         <br>
