--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="Поиск и проверка олимпиад абитуриентов">
 <meta name="theme-color" content="#3367D6">
 <meta name="google-site-verification" content="-UX3T2JISXFjo-jWgSf0NvtiZazPDnhPaFh9Rff3z4g" />
+<meta name="yandex-verification" content="9811506c6180e078" />
 <script src="js/bvi.js"></script>
 <script src="js/diploma.js"></script>
 <!-- <script src="stars.js"></script> -->
