--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
                 <form id="search_form" autocomplete="on">
                     <p>
                         <label for="LN">Фамилия</label>
-                        <input type="text" id="LN" placeholder="Иванов" name="last_name"/>
+                        <input type="text" id="LN" placeholder="Иванов" name="last_name" onkeyup="check_data()"/>
                     </p>
                     <p>
                         <label for="FN">Имя</label>
-                        <input type="text" id="FN" placeholder="Иван" name="first_name"/>
+                        <input type="text" id="FN" placeholder="Иван" name="first_name" onkeyup="check_data()"/>
                     </p>
                     <p>
                         <label for="MN">Отчество</label>
-                        <input type="text" id="MN" placeholder="Иванович" name="middle_name"/>
+                        <input type="text" id="MN" placeholder="Иванович" name="middle_name" onkeyup="check_data()"/>
                     </p>
                     <p>
                         <label for="BD">Дата рождения</label>
-                        <input type="date" id="BD" max="2005-01-01" min="1996-01-01" value="2002-01-01" name="bday"/>
+                        <input type="date" id="BD" max="2005-01-01" min="1996-01-01" value="2002-01-01" name="bday" onchange="check_data()"/>
                     </p>
                 </form>
             </div>
-            <div class="ege">
+            <div class="ege" onchange="rename_button(true)">
                 <form>
                     <p>
                         <label for="m">Математика</label>
@@ -115,7 +115,7 @@
         </div>
         <div id="check_button">
 			<br>
-            <button type="submit" onclick="do_search()">Проверить</button>
+            <button type="submit" disabled onclick="do_search()">Проверить</button>
             <br>
         </div>
         <p id="results"></p>
