--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </a>
     </div>
     <div class="right">
-        <p><a href="files/2020_rsosh_BVI.pdf">РСОШ 2020, дающие БВИ</a></p>
-        <p><a href="files/2020_rsosh_100.pdf">РСОШ 2020, дающие 100 баллов</a></p>
-        <p><a href="files/2020_vsosh_BVI.pdf">ВСОШ (предметы и направления)</a></p>
+        <p><a href="https://abit.itmo.ru/file/pages/82/rsosh2021.pdf">РСОШ 2021, дающие БВИ</a></p>
+        <p><a href="https://abit.itmo.ru/file/pages/82/100ballov_2021.pdf">РСОШ 2021, дающие 100 баллов</a></p>
+        <p><a href="https://abit.itmo.ru/file/pages/82/vosh_2021.pdf">ВСОШ (предметы и направления)</a></p>
         <p><a href="files/2020.pdf">Списки ВСЕРОСа 2020</a></p>
         <p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
         <p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
