--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <p id="results"></p>
     </div>
     <div class="copyright">
-        <a href="https://vk.com/kazakovstepan">&copy; 2020, kazakovstepan</a>
+        <a href="https://vk.com/kazakovstepan">&copy; 2020-2021, kazakovstepan</a>
     </div>
 </body>
 
