--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#3367D6">
     <script src="js/bvi.js"></script>
     <script src="js/diploma.js"></script>
-    <!-- <script src="stars.js"></script> -->
+    <!-- <script src="js/stars.js"></script> -->
     <style>
         @font-face {
             font-family: 'ALS Schlange Sans';
@@ -31,8 +31,7 @@
 </head>
 
 <body>
-    <!-- <canvas id="stars"></canvas> -->
-    <!-- <script>start_stars(); window.onresize=function(){start_stars()};</script> -->
+    <canvas id="stars"></canvas>
     <div class="left">
         <a href="https://abit.itmo.ru">
             <img src="files/itmo_white.png" alt="abit" title="IT's MOre than a University">
