--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <p><a href="files/2020.pdf">Списки ВСЕРОСа 2020</a></p>
         <p><a href="files/2019.pdf">Списки ВСЕРОСа 2019</a></p>
         <p><a href="files/2018.pdf">Списки ВСЕРОСа 2018</a></p>
-        <p id="contacts" style="display: none"><a href="files/contacts.pdf">Ответственные лица (бакалавриат)</a></p>
+        <p><a href="http://abit.ifmo.ru/page/101/">Ответственные лица (бакалавриат)</a></p>
+        <p><a href="http://abit.ifmo.ru/page/102/">Ответственные лица (магистратура)</a></p>
     </div>
     <div id="main_res" class="main">
         <br>
