add link to https://snegiry.art/isu/
Signed-off-by: ksrt12 <ksrt12group@gmail.com>

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
         <p id="results"></p>
     </div>
     <div class="copyright">
+        <a href="https://snegiry.art/isu">Скрипты</a>
+        <br>
         <a href="https://vk.com/kazakovstepan">&copy; 2020-2021, kazakovstepan</a>
     </div>
 </body>
